# Enterprise-Three-Tier-Banking-Platform

./: .checkov.yml  .gitignore  .pre-commit-config.yaml  .tflint.hcl  Makefile  README.md  linkedin.md  medium.md
.github/: CODEOWNERS
ansible/: ansible.cfg  requirements.yml  site.yml
app/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/src/banking/: __init__.py  config.py  database.py  deps.py  email.py  errors.py  main.py  models.py  schemas.py  security.py  services.py
app/src/banking/routers/: accounts.py  admin.py  auth.py  health.py  transfers.py
app/tests/: conftest.py  test_account_actions.py  test_accounts.py  test_admin.py  test_auth.py  test_health.py  test_insights.py  test_password_reset.py  test_statements.py  test_transfers.py
app/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/web/src/: App.tsx  index.css  main.tsx  types.ts
app/web/src/api/: client.ts
app/web/src/components/: AuthShell.tsx  InsightsPanel.tsx  NavBar.tsx  RequireAuth.tsx  icons.tsx  ui.tsx
app/web/src/lib/: auth.tsx  money.ts  useTheme.ts
app/web/src/pages/: AccountPage.tsx  AccountsPage.tsx  AdminPage.tsx  CreateAccountPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  TransferPage.tsx
docs/: ARCHITECTURE.md  RUNBOOK.md  SECURITY.md  iam-deploy-policy.json  oidc-trust-policy.json  parah-access-policy.json
scripts/: bootstrap-backend.sh  setup-oidc.sh
(+96 files in other folders)
